--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,13 @@
 			<artifactId>spring-web</artifactId>
 			<version>6.0.13</version>
 		</dependency>
+        <dependency>
+            <groupId>in.yajnesh.util</groupId>
+            <artifactId>java-util</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
