--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 		<!-- 課題になかったやつ-->
 		<dependency>
